<resources>
    <string name="app_name">Notifii Track</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="error_no_network_title">Network Error!</string>
    <string name="no_network_message">"You are not connected to the Internet."</string>
    <string name="tab_log_pkg_login">Log Package in</string>
    <string name="tab_log_pkg_logout">Log Package Out</string>
    <string name="tab_search">Search</string>
    <string name="tab_account_tools">Account Tools</string>
    <string name="title_pkg_details">Package Details</string>
    <string name="action_submit">Submit</string>
    <string name="action_reset_my_account">Reset My Account</string>
    <string name="action_update_my_user_account">Update My User Account</string>
    <string name="text_name">Name</string>
    <string name="text_name_content">Name *</string>
    <string name="text_email">Email</string>
    <string name="text_email_content">Email *</string>
    <string name="text_phone">Phone</string>
    <string name="text_message">Message</string>
    <string name="text_message_content">Message *</string>
    <string name="text_contact_us_text">You can call us at (888) 506-8536  during normal business hours (Pacific Time) or send us a message using the form below.We try to reply to all messages within one business day.</string>
    <string name="name_error_field_required">Please enter your name.</string>
    <string name="error_invalid_email">Please enter your valid email.</string>
    <string name="error_invalid_phone_number">This phone number is invalid.</string>
    <string name="text_new_username">New Username</string>
    <string name="email_error_field_required">Please enter your email.</string>
    <string name="msg_error_field_required">Please enter your message.</string>
    <string name="text_new_password">New Password</string>
    <string name="text_confirm_password">Confirm Password</string>
    <string name="text_account">Account</string>
    <string name="text_user">User</string>
    <string name="text_user_name">Username</string>
    <string name="text_full_name">Full Name</string>
    <string name="action_view_resident_list">View Resident List</string>
    <string name="action_add_new_resident">Add New Resident</string>
    <string name="action_package_history">Package History</string>
    <string name="action_contact_us">Contact Us</string>
    <string name="action_update_username">Update Username</string>
    <string name="action_update_password">Update Password</string>
    <string name="action_refersh">Refresh</string>
    <string name="action_logout">Log Out</string>
    <string name="text_version">Version </string>
    <string name="text_show_packages">Show packages</string>
    <string name="text_dates">Between the dates of</string>
    <string name="text_filter">Filter By</string>
    <string name="text_mail_room">Mailroom</string>
    <string name="action_update">Update</string>
    <string name="date_picked_up">Date Picked Up</string>
    <string name="text_cancel">Cancel</string>
    <string name="reset_description">Please provide either your username and/or email and we\'ll reset your account. If you do not get the email within the next few minutes, please check your spam folder.</string>
    <string name="forgot_pwd_title">Recover My Username/Password</string>
    <string name="update_username_pwd_title">Update Username and Password</string>
    <string name="packageSelected">Package Selected</string>
    <string name="packagesSelected">Packages Selected</string>
    <string name="login_images">Log-in Images :</string>
    <string name="logout_images">Log-out Images :</string>
    <string name="change_password">Change Your Password</string>
    <string name="i_forget_my_password">I forgot my password</string>
    <string name="no_packages_found">No packages found.</string>
    <string name="sender">Sender</string>
    <string name="optOut_title_text">Your recipient data is imported automatically through a data integration. If this person wants to opt-out, you need to override the global integration settings by checking the boxes below.</string>
    <string name="optOut_email_text">Permanently opt-out for email notifications</string>
    <string name="optOut_message_text">Permanently opt-out for text-message notifications</string>
    <string name="notifications">Notifications</string>
    <string name="insufficient_privileges">Your user account does not have sufficient privileges to access this specific page.</string>
    <string name="date">Date</string>
    <string name="notificaton_type">Notification Type</string>
    <string name="mode">Mode</string>
    <string name="tag_number">Tag Number</string>
    <string name="package_type">Package Type</string>
    <string name="lpo_shelf">Shelf:</string>
    <string name="track_number">Tracking Number</string>
    <string name="main_room">Mailroom</string>
    <string name="date_received">Date Received</string>
    <string name="singn_out_selected_pck">Continue With Selected Packages</string>
    <string name="go">Go</string>
    <string name="selected_pkg">Selected Package(s)</string>
    <string name="sign_below">Signature</string>
    <string name="submit_sign">Done! Log Out</string>
    <string name="clear_signature">Clear Signature</string>
    <string name="list_view_mode">List View Modes</string>
    <string name="hint_user_name">Username</string>
    <string name="hint_user_pwd">Password</string>
    <string name="btn_str_login">Login</string>
    <string name="error_user_name_field_required">Please Enter your Username</string>
    <string name="error_pwd_field_required">Please Enter your Password</string>
    <string name="text_sort">Sort By</string>
    <string name="done">Done</string>
    <string name="address1_code">0</string>
    <string name="recipient_name_code">1</string>
    <string name="tracking_number_code">2</string>
    <string name="tag_number_code">3</string>
    <string name="package_type_code">4</string>
    <string name="shelf_code">5</string>
    <string name="sender_code">6</string>
    <string name="mailroom_code">7</string>
    <string name="date_received_code">8</string>
    <string name="show_advanced_options">Show Advanced Options</string>
    <string name="unit_number">(Unit Number)</string>
    <string name="text_refresh">Refresh</string>
    <string name="click_to_sign">Tap to Sign</string>
    <string name="signature">Signature</string>
    <string name="clear">Clear</string>
    <string name="tracking_number">Tracking#:</string>
    <string name="received">Received:</string>
    <string name="tag">Tag#:</string>
    <string name="text_shelf">Shelf:</string>
    <string name="text_sender">Sender:</string>
    <string name="text_mailroom">Mailroom:</string>
    <string name="text_pkg_type">PkgType:</string>
    <string name="filter_this_list">Filter this list</string>
    <string name="employee_name">Employee Name</string>
    <string name="please_sign_below">Please sign below</string>
    <string name="forgot_pwd_bottom_text">If you don\'t get an email in the next few minutes, please check your spam folder. If you need further assistance, please contact us at 888-506-8536 or support@notifii.com.</string>
    <string name="nevermind">Nevermind</string>
    <string name="whats_your_email">What\'s your email?</string>
    <string name="no_password">No password? It happens.</string>
    <string name="avenir_roman">AvenirRoman</string>
    <string name="avenir_italic">AvenirItalic</string>
    <string name="avenir_medium">AvenirMedium</string>
    <string name="action_recover_password">Recover Password</string>
    <string name="firstname">First Name\n</string>
    <string name="lastName">Last Name\n</string>
    <string name="type">Type\n</string>
    <string name="status">Status\n</string>
    <string name="mobilePhone">Cellphone</string>
    <string name="notifi_pref">Notification Preferences</string>
    <string name="search">Search...</string>
    <string name="filter">Filter by resident name or unit number</string>
    <string name="recipientName">Recipient Name</string>
    <string name="tracking_no">Tracking Number</string>
    <string name="mailroom">Mailroom</string>
    <string name="special_handling">Special Handling</string>
    <string name="urgent">Urgent</string>
    <string name="fragile">Fragile</string>
    <string name="perishable">Perishable</string>
    <string name="extremely_heavy">Extremely Heavy</string>
    <string name="custom_message">Custom Message</string>
    <string name="log_pkg_in">Log Package In</string>
    <string name="carrier">Carrier</string>
    <string name="dilivery_notifications">Delivery Notifications</string>
    <string name="notifications_override">Notifications Overrides</string>
    <string name="text_sort_by">Sort By</string>
    <string name="select_one">Select One</string>
    <string name="pkg_log_out">Log Package Out</string>
    <string name="pkg_cond">Package Condition</string>
    <string name="po_no">PO Number</string>
    <string name="service_type">Service Type</string>
    <string name="shelf_loc">Shelf Location</string>
    <string name="text_email_address">Email Address</string>
    <string name="next">Next</string>
    <string name="alert_success_title">Success</string>
    <string name="filter_results">Filter Results</string>
    <string name="between">between</string>
    <string name="and">and</string>
    <string name="filter_by">Filter by</string>
    <string name="update">Update</string>
    <string name="resident_name">Name</string>
    <string name="unit">Unit #</string>
    <string name="tracking">Tracking #</string>
    <string name="picked_up">Picked Up</string>
    <string name="log_in">Log-In</string>
    <string name="log_in_by">Log-In By</string>
    <string name="log_out">Log-Out</string>
    <string name="log_out_by">Log-Out By</string>
    <string name="tag_">Tag #</string>
    <string name="pkg_log_in">Package Log In</string>
    <string name="pkg_log_out_text">Package Log Out</string>
    <string name="package_condition">Package Condition</string>
    <string name="staff_note">Staff Note</string>
    <string name="po_number">PO Number</string>
    <string name="name">Name</string>
    <string name="account_user_type">User Type</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="no_signature">No signature available</string>
    <string name="no_picture">No picture available</string>
    <string name="action_profile">Profile</string>
    <string name="text_new_name">New Name</string>
    <string name="text_new_email">New Email</string>
    <string name="save">Save</string>
    <string name="warning">Warning</string>
    <string name="text_account_type">Account Type </string>
    <string name="photos">Photos</string>
    <string name="login_pictures">Log-In Pictures</string>
    <string name="log_out_pictures">Log-Out Pictures</string>
    <string name="please_select">Please Select</string>
    <string name="log_out_package">Log Package Out</string>
    <string name="pictures">Pictures</string>
    <string name="refresh_app_data">Refresh App Data</string>
    <string name="no_packages">No packages</string>
    <string name="avenir_heavy">AvenirHeavy</string>
    <string name="my_profile">My Profile</string>
    <string name="submit">Submit</string>
    <string name="cellphone">Cellphone</string>
    <string name="status_filter">Status Filter</string>
    <string name="unit_no">Unit Number</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="search_logic">Search Logic</string>
    <string name="selectpackages">Select Your Packages</string>
    <string name="startover">Start Over</string>
    <string name="Close_error_messsage">Close error messsage</string>
</resources>