<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/parentLayout"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/login_margin"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:id="@+id/logo_image"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="@dimen/login_margin"
                android:layout_marginRight="@dimen/login_margin"
                android:src="@drawable/ic_notifii_track_logo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:text="@string/no_password"
                android:textColor="@color/nopasswordcolor"
                android:textSize="@dimen/biggest_textsize"
                style="@style/NoPaddingTextViewStyle"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                style="@style/NoPaddingTextViewStyle"
                android:gravity="center"
                android:text="@string/whats_your_email"
                android:textColor="@color/nopasswordcolor"
                android:textSize="@dimen/biggest_textsize" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/login_margin"
                android:layout_marginRight="@dimen/login_margin"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editText_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:hint="@string/text_email_address"
                    android:inputType="textEmailAddress"
                    android:imeOptions="actionGo"
                    android:contentDescription="Email address"
                    style="@style/EditTextStyle"/>

                <Button
                    android:id="@+id/button_reset_my_account"
                    style="@style/ButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:layout_gravity="center"
                    android:layout_marginTop="24dp"
                    android:text="@string/action_recover_password"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView_never_mind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_vertical"
                        style="@style/NoPaddingTextViewStyle"
                        android:text="@string/nevermind"
                        android:contentDescription="Go to login page button"
                        android:textColor="@color/no_preview_color" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:layout_gravity="center"
        style="@style/NoPaddingTextViewStyle"
        android:gravity="center"
        android:text="@string/forgot_pwd_bottom_text"
        android:textColor="@color/no_preview_color"/>
</LinearLayout>