<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:contentDescription="Search Resident"
    android:focusable="true"
    android:importantForAccessibility="yes"
    android:orientation="vertical">

    <include layout="@layout/toolbar_main" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:orientation="vertical">

            <TextView
                style="@style/NoPaddingTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name" />

            <EditText
                android:id="@+id/first_name"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height"
                android:layout_marginTop="@dimen/item_margin"
                android:contentDescription="First name" />

            <TextView
                style="@style/NoPaddingTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/frame_margin"
                android:text="@string/last_name" />

            <EditText
                android:id="@+id/last_name"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height"
                android:layout_marginTop="@dimen/item_margin"
                android:contentDescription="Last name" />

            <TextView
                android:id="@+id/unit_number_text"
                style="@style/NoPaddingTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/frame_margin"
                android:text="@string/unit_no" />

            <EditText
                android:id="@+id/unit_number"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height"
                android:layout_marginTop="@dimen/item_margin"
                android:contentDescription="" />

            <TextView
                style="@style/NoPaddingTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/frame_margin"
                android:text="@string/text_email" />

            <EditText
                android:id="@+id/email"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height"
                android:layout_marginTop="@dimen/item_margin"
                android:contentDescription="Email" />

            <TextView
                style="@style/NoPaddingTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/frame_margin"
                android:text="@string/cellphone" />

            <EditText
                android:id="@+id/cellphone"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height"
                android:layout_marginTop="@dimen/item_margin"
                android:contentDescription="Cellphone"
                android:inputType="number" />

            <TextView
                style="@style/NoPaddingTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/frame_margin"
                android:text="@string/status_filter" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height"
                android:layout_marginTop="@dimen/item_margin"

                android:background="@drawable/bg_edittext">

                <Spinner
                    android:id="@+id/status_filter"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@null"

                    android:divider="#D3D3D3"
                    android:dividerHeight="1dp"
                    android:dropDownWidth="match_parent"
                    android:popupBackground="@drawable/spinner_list"
                    android:spinnerMode="dropdown"
                    android:textColor="@color/text"
                    android:textSize="@dimen/medium_textsize" />

                <TextView
                    android:id="@+id/tv_status_filter"
                    style="@style/NoPaddingTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edittext_height"
                    android:layout_gravity="center"
                    android:contentDescription="Button to select status filter options"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:hint="@string/select_one"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:singleLine="true" />

                <ImageView
                    android:id="@+id/statusButtonDownArrow"
                    style="@style/DropDownArrowStyle"/>

            </FrameLayout>

            <TextView
                style="@style/NoPaddingTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/frame_margin"
                android:text="@string/search_logic" />

            <FrameLayout
                android:id="@+id/search_logic_frame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/item_margin"

                android:background="@drawable/bg_edittext">

                <Spinner
                    android:id="@+id/search_logic_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@null"
                    android:divider="#D3D3D3"
                    android:dividerHeight="1dp"
                    android:dropDownWidth="match_parent"
                    android:popupBackground="@drawable/spinner_list"
                    android:textColor="@color/text"
                    android:textSize="@dimen/medium_textsize" />

                <TextView
                    android:id="@+id/tv_search_filter"
                    style="@style/NoPaddingTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edittext_height"
                    android:layout_gravity="center"
                    android:contentDescription="Button to select search logic options"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:hint="Select One"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:singleLine="true" />

                <ImageView
                    android:id="@+id/pkgTypeButtonDownArrow"
                    style="@style/DropDownArrowStyle"/>

            </FrameLayout>

            <Button
                android:id="@+id/saveBtn"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="35dp"
                android:text="@string/tab_search" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>